# webpack-bazel

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  package.json  shell.nix  webpack-bazel.js  webpack.bzl  webpack.config.js
nix/: purescript-packages.nix
ps-lib/Lib/: Test.js  Test.purs  Test2.purs
src/: Main.purs  index.html  index.js
webpack/: BUILD.bazel  bazel.js.template  bundle.bzl  context.bzl  toolchain.bzl  webpack.bzl
