package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")
load(":webpack.bzl", "webpack_bundle")

webpack_bundle(
    name = "bundle",
    config = "//:webpack.config.js",
    srcs = glob(["src/**"]),
    dist_dir = "dist",
    plugins = [
        "@npm//html-webpack-plugin",
    ],
)
